// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CustomRegisterField> > renders and matches snapshot <Checkbox> 1`] = `
<div>
  <div
    class="_formField_86f2f5 _checkbox_a98c3a"
  >
    <div
      class="_row_a98c3a"
    >
      <input
        aria-describedby="helper_text_1235_name"
        data-testid="crf-checkbox"
        id="text-field_1235_name"
        name="name"
        type="checkbox"
        value=""
      />
      <label
        for="text-field_1235_name"
      >
        label
      </label>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="country"> 1`] = `
<div>
  <div
    class="_formField_86f2f5"
    data-testid="crf-country"
  >
    <label
      class="_label_86f2f5"
      for="text-field_1235_name"
    >
      label
    </label>
    <div
      class="_container_d97916"
    >
      <select
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_select_d97916"
        id="text-field_1235_name"
        name="name"
      >
        <option
          class="_option_d97916"
          value="af"
        >
          country:af
        </option>
        <option
          class="_option_d97916"
          value="ax"
        >
          country:ax
        </option>
        <option
          class="_option_d97916"
          value="al"
        >
          country:al
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="datepicker"> 1`] = `
<div>
  <div
    class="_formField_86f2f5 _dateField_0addad"
    data-testid="crf-datepicker"
  >
    <label
      class="_label_86f2f5"
      for="text-field_1235_name"
    >
      label
    </label>
    <div
      class="_container_0addad"
    >
      <input
        aria-describedby="helper_text_1235_name"
        class="_hiddenInput_0addad"
        id="text-field_1235_name-hidden"
        name="name"
      />
      <input
        autocomplete="bday-day"
        class="_input_0addad"
        id="text-field_1235_name-date"
        maxlength="2"
        name="date"
        placeholder="dd"
        type="number"
        value=""
      />
       / 
      <input
        autocomplete="bday-month"
        class="_input_0addad"
        id="text-field_1235_name-month"
        maxlength="2"
        name="month"
        placeholder="mm"
        type="number"
        value=""
      />
       / 
      <input
        autocomplete="bday-year"
        class="_input_0addad"
        id="text-field_1235_name-year"
        maxlength="4"
        name="year"
        placeholder="yyyy"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="randomstring"> 1`] = `
<div>
  <div
    class="_formField_86f2f5 _checkbox_a98c3a"
  >
    <div
      class="_row_a98c3a"
    >
      <input
        aria-describedby="helper_text_1235_name"
        data-testid="crf-randomstring"
        id="text-field_1235_name"
        name="name"
        type="checkbox"
        value=""
      />
      <label
        for="text-field_1235_name"
      >
        label
      </label>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="select"> 1`] = `
<div>
  <div
    class="_formField_86f2f5"
    data-testid="crf-select"
  >
    <label
      class="_label_86f2f5"
      for="text-field_1235_name"
    >
      label
    </label>
    <div
      class="_container_d97916"
    >
      <select
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_select_d97916"
        id="text-field_1235_name"
        name="name"
      />
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="us_state"> 1`] = `
<div>
  <div
    class="_formField_86f2f5"
    data-testid="crf-us_state"
  >
    <label
      class="_label_86f2f5"
      for="text-field_1235_name"
    >
      label
    </label>
    <div
      class="_container_d97916"
    >
      <select
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_select_d97916"
        id="text-field_1235_name"
        name="name"
      >
        <option
          class="_option_d97916"
          value="al"
        >
          us_state:al
        </option>
        <option
          class="_option_d97916"
          value="ak"
        >
          us_state:ak
        </option>
        <option
          class="_option_d97916"
          value="az"
        >
          us_state:az
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Radio> 1`] = `
<div>
  <div
    class="_formField_86f2f5"
  >
    <label
      class="_label_86f2f5"
      for="text-field_1235_name"
    >
      label
    </label>
    <div
      id="text-field_1235_name"
    />
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <TextField> 1`] = `
<div>
  <div
    class="_formField_86f2f5 _textField_c799b0"
    data-testid="crf-input"
  >
    <label
      class="_label_86f2f5"
      for="text-field_1235_name"
    >
      label
    </label>
    <div
      class="_container_859b20"
    >
      <input
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_input_859b20"
        id="text-field_1235_name"
        name="name"
        type="text"
        value="value"
      />
    </div>
  </div>
</div>
`;
